# niffler-py-st3

./: .gitignore  build.gradle  docker-compose-dev.sh  docker.properties  requirements.txt
niffler-grpc-common/: build.gradle
niffler-tests/: .env.sample  .gitignore  config.py  exceptions.py  pyproject.toml  pytest.ini
niffler-tests/actions/: auth_actions.py  profile_actions.py  spending_actions.py
niffler-tests/builders/: spending_builder.py  user_builder.py
niffler-tests/clients/: auth_session.py  oauth_client.py  spends_client.py
niffler-tests/components/: header.py
niffler-tests/components/filters/: currency_filter.py  time_filter.py
niffler-tests/components/forms/: login_form.py  spending_form.py
niffler-tests/data_bases/: spend_db.py
niffler-tests/models/: data_models.py
niffler-tests/pages/: base_page.py  login_page.py  main_page.py  spending_page.py
niffler-tests/tests/: conftest.py  test_auth.py  test_main_page.py  test_spending.py
niffler-tests/utils/: urls.py
